--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Assignment1C__)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(Assignment1C__ main.cpp)
+add_executable(Assignment1C__ mazer.cpp)
